--- a/Assignment_1/.project
+++ b/Assignment_1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>studyplan.model</name>
+	<name>Assignment_1</name>
 	<comment></comment>
 	<projects>
 	</projects>
